Bug 1914662 - Correctly extract or generate a message ID for delayed sending. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D220297

--HG--
extra : amend_source : 2b8372d71c3484a280f76e4915896e2eaac15d1a
extra : absorb_source : af7b000b38c88dcbfdda999fa33ec31f90f9da13